--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
 # === Brevo SMTP Configuration ===
 SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_USER=testing7890875@gmail.com
+SMTP_USER=91521a001@smtp-brevo.com
 SMTP_PASS=YK2UQVaE5w13bzT7
 FROM_NAME=OYIEE
 FROM_EMAIL=testing7890875@gmail.com
